--- a/28-portfolio/portfolio/index.html
+++ b/28-portfolio/portfolio/index.html
@@ -50,8 +50,8 @@
     <section class="about" id="about">
       <div class="about__inner">
           <div class="about__body">
-            <h2 class="about__title">Привет! <span class="about__active-title">Меня зовут Игорь.</span></h2>
-            <p class="about__subtitle">Я <span class="about__active-subtitle">веб разработчик</span></p>
+            <h2 class="about__title">Привет! <span class="about__active-title" data-js-main-title-print>Меня зовут Игорь.</span></h2>
+            <p class="about__subtitle">Я <span class="about__active-subtitle" data-js-main-subtitle-print>веб разработчик.</span></p>
             <p class="about__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus doloremque doloribus earum inventore possimus quia voluptate? Architecto aut eaque eius et facere fuga itaque labore maiores maxime officia, quo tempore.</p>
           </div>
 
