--- a/28-portfolio/portfolio/index.html
+++ b/28-portfolio/portfolio/index.html
@@ -13,7 +13,7 @@
       <div class="header__settings switchers">
         <button class="switchers__theme-btn" type="button" title="включить светлую тему" data-js-btn-switcher-theme>
           <span class="visually-hidden">Кнопка переключения светлой темы</span>
-          <img title="включить светлую тему" src="./public/icons/header/Icon-theme-dark.svg" width="36" height="36" alt="" data-js-btn-switcher-theme-icon>
+          <img title="" src="" width="36" height="36" alt="" data-js-btn-switcher-theme-icon>
         </button>
         <button class="switchers__language-btn" type="submit" data-js-btn-switcher-language>switch language to eng</button>
       </div>
@@ -28,11 +28,11 @@
 
       <nav class="header__nav main-menu">
         <ul class="main-menu__list list-reset">
-          <li class="main-menu__item"> <a class="main-menu__link" href="#home">главная</a> </li>
-          <li class="main-menu__item"> <a class="main-menu__link" href="#about">обо мне</a> </li>
-          <li class="main-menu__item"> <a class="main-menu__link" href="#education">образование</a> </li>
-          <li class="main-menu__item"> <a class="main-menu__link" href="#portfolio">портфолио</a> </li>
-          <li class="main-menu__item"> <a class="main-menu__link" href="#contact">контакты</a> </li>
+          <li class="main-menu__item"> <a class="main-menu__link button" href="#home">главная</a> </li>
+          <li class="main-menu__item"> <a class="main-menu__link button" href="#about">обо мне</a> </li>
+          <li class="main-menu__item"> <a class="main-menu__link button" href="#education">образование</a> </li>
+          <li class="main-menu__item"> <a class="main-menu__link button" href="#portfolio">портфолио</a> </li>
+          <li class="main-menu__item"> <a class="main-menu__link button" href="#contact">контакты</a> </li>
         </ul>
       </nav>
     </div>
@@ -50,18 +50,26 @@
 
     <h1 class="visually-hidden">Page portfolio</h1>
 
-    <section class="about" id="about">
-      <div class="about__inner">
-          <div class="about__body">
-            <h2 class="about__title" data-js-title>Привет! <span class="about__active-title" data-js-main-title-print>Меня зовут Игорь.</span></h2>
-            <p class="about__subtitle">Я <span class="about__active-subtitle" data-js-main-subtitle-print>веб разработчик.</span></p>
-            <p class="about__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus doloremque doloribus earum inventore possimus quia voluptate? Architecto aut eaque eius et facere fuga itaque labore maiores maxime officia, quo tempore.</p>
+    <section class="hero" id="about">
+      <div class="hero__inner">
+          <div class="hero__body">
+            <h2 class="hero__title" data-js-title>Привет! <span class="hero__active-title" data-js-main-title-print>Меня зовут Игорь.</span></h2>
+            <p class="hero__subtitle">Я <span class="hero__active-subtitle" data-js-main-subtitle-print>веб разработчик.</span></p>
+            <p class="hero__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus doloremque doloribus earum inventore possimus quia voluptate? Architecto aut eaque eius et facere fuga itaque labore maiores maxime officia, quo tempore.</p>
           </div>
 
-        <button class="about__button">
+        <button class="hero__button button">
           <span>обо мне</span>
-          <img src="./public/icons/about-section/person-icon.svg" alt="icon-person">
+          <svg class="hero__button-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+          </svg>
         </button>
+      </div>
+    </section>
+
+    <section class="about">
+      <div class="about__inner">
+        <h2 class="about__title">Обо <span>мне</span></h2>
       </div>
     </section>
   </main>
