--- a/28-portfolio/portfolio/index.html
+++ b/28-portfolio/portfolio/index.html
@@ -62,8 +62,8 @@
     <section class="hero" id="home">
       <div class="hero__inner">
           <div class="hero__body">
-            <h2 class="hero__title" data-js-title data-js-lang="hi">Привет! <span class="hero__active-title" data-js-lang="myNameIs" data-js-main-title-print>Меня зовут Игорь.</span></h2>
-            <p class="hero__subtitle" data-js-title data-js-lang="i">Я <span class="hero__active-subtitle" data-js-title data-js-lang="webDeveloper" data-js-main-subtitle-print>веб разработчик.</span></p>
+            <h2 class="hero__title print-text" data-js-lang="myNameIs" >Привет! Меня зовут Игорь.</h2>
+            <p class="hero__subtitle print-text" data-js-title data-js-lang="iWebDeveloper">Я веб разработчик.</p>
             <p class="hero__description" data-js-lang="myDescription">Создаю интерактивные веб-интерфейсы, превращаю идеи в пиксельно точные интерфейсы и наполняю их жизнью благодаря современным технологиям React, TypeScript и экосистеме современного JavaScript.
               Создаю не просто сайты — а цифровые продукты, которые решают бизнес-задачи. Моя цель — помогать бизнесу расти через качественный UI/UX дизайн и надежный frontend</p>
           </div>
