--- a/28-portfolio/portfolio/index.html
+++ b/28-portfolio/portfolio/index.html
@@ -32,7 +32,7 @@
           <img class="profile-info__photo" src="./public/images/header/avatar-photo.jpg" alt="photo-avatar">
         </div>
         <span class="profile-info__name" data-lang="header.name" data-js-lang="name">Игорь Костюченко</span>
-        <p class="profile-info__job" data-lang="header.profession" data-js-lang="profession">Front-end developer</p>
+        <p class="profile-info__job" data-lang="header.profession" >Front-end developer</p>
       </div>
 
       <nav class="header__nav main-menu">
